--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 1.10.17.RELEASE (2018-11-27)
+-----------------------------------------------
+* DATAMONGO-2135 - Use List instead of Collection when reading data with MappingMongoConverter.
+* DATAMONGO-2118 - Fix typo in repositories reference documentation.
+* DATAMONGO-2110 - Release 1.10.17 (Ingalls SR17).
+
+
 Changes in version 2.1.2.RELEASE (2018-10-29)
 ---------------------------------------------
 * DATAMONGO-2118 - Fix typo in repositories reference documentation.
