--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.0.12.RELEASE (2018-11-27)
+----------------------------------------------
+* DATAMONGO-2135 - Use List instead of Collection when reading data with MappingMongoConverter.
+* DATAMONGO-2119 - Combining a SpEL expression and a $regex filter triggers a PatternSyntaxException.
+* DATAMONGO-2118 - Fix typo in repositories reference documentation.
+* DATAMONGO-2109 - Release 2.0.12 (Kay SR12).
+* DATAMONGO-2098 - Typo in MappingMongoConverterParser.
+
+
 Changes in version 1.10.17.RELEASE (2018-11-27)
 -----------------------------------------------
 * DATAMONGO-2135 - Use List instead of Collection when reading data with MappingMongoConverter.
