--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.3.RELEASE (2018-11-27)
+---------------------------------------------
+* DATAMONGO-2139 - Auditing broken for entities using optimistic locking via version properties.
+* DATAMONGO-2135 - Use List instead of Collection when reading data with MappingMongoConverter.
+* DATAMONGO-2130 - Repository count errors in ClientSession / Transaction.
+* DATAMONGO-2121 - Release 2.1.3 (Lovelace SR3).
+* DATAMONGO-2119 - Combining a SpEL expression and a $regex filter triggers a PatternSyntaxException.
+
+
 Changes in version 2.0.12.RELEASE (2018-11-27)
 ----------------------------------------------
 * DATAMONGO-2135 - Use List instead of Collection when reading data with MappingMongoConverter.
