--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -1792,6 +1792,41 @@ GeoResults<Jedi> results = mongoOps.query(SWCharacter.class)
 ----
 ====
 
+[[mongo.query.kotlin-support]]
+=== Type-safe Queries for Kotlin
+
+https://kotlinlang.org/docs/reference/reflection.html#property-references[Kotlin property references]
+can be used to build type-safe queries.
+
+Most methods in `Criteria` have a matching Kotlin extension, like `inValues` and `regex`.
+
+====
+[source,kotlin]
+----
+import org.springframework.data.mongodb.core.query.*
+
+mongoOperations.find<Book>(
+  Query(Book::title isEqualTo "Moby-Dick") <1>
+)
+
+Book::title exists true
+
+Criteria().andOperator(
+  Book::price gt 5,
+  Book::price lt 10
+)
+
+// Binary operators
+BinaryMessage::payload bits { allClear(0b101) } <2>
+
+// Nested Properties (i.e. refer to "book.author")
+Book::author / Author::name regex "^H" <3>
+----
+<1> `isEqualTo()` is an infix extension function with receiver type `KProperty<T>` that returns `Criteria`.
+<2> For bitwise operators, pass a lambda argument where you call one of the methods of `Criteria.BitwiseCriteriaOperators`.
+<3> To construct nested properties, use the `/` character (overloaded operator `div`).
+====
+
 [[mongo.query.additional-query-options]]
 === Additional Query Options
 
