--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,16 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.0.13.RELEASE (2019-01-10)
+----------------------------------------------
+* DATAMONGO-2175 - Update copyright years to 2019.
+* DATAMONGO-2174 - InvalidPersistentPropertyPath with @Version.
+* DATAMONGO-2170 - IndexInfo.partialFilterExpression should be null (not an empty String) when undefined.
+* DATAMONGO-2156 - Remove javax.xml.bind dependency from ExpressionEvaluatingParameterBinder.
+* DATAMONGO-2149 - Target bean of type java.lang.Integer is not of type of the persistent entity.
+* DATAMONGO-2144 - Release 2.0.13 (Kay SR13).
+
+
 Changes in version 1.10.18.RELEASE (2019-01-10)
 -----------------------------------------------
 * DATAMONGO-2175 - Update copyright years to 2019.
