--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -7,6 +7,8 @@
 * <<mongodb.reactive.repositories.queries.type-safe,Querydsl support for reactive repositories>> via `ReactiveQuerydslPredicateExecutor`.
 * <<reactive.gridfs,Reactive GridFS support>>.
 * Extended SpEL aggregation support for MongoDB 3.4 and MongoDB 4.0 operators (see <<mongo.aggregation.projection.expressions>>).
+* Template API delete by entity considers the version property in delete queries.
+* Repository deletes now throw `OptimisticLockingFailureException` when a versioned entity cannot be deleted.
 
 [[new-features.2-1-0]]
 == What's New in Spring Data MongoDB 2.1
