DATAMONGO-2195 - Throw OptimisticLockingFailureException on delete only in repositories.
OptimisticLockingFailureException is now thrown only when deleting an entity through a repository and no longer when using the Template API.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -6,6 +6,8 @@
 * <<mongo.query.kotlin-support,Type-safe Queries for Kotlin>>
 * <<mongodb.reactive.repositories.queries.type-safe,Querydsl support for reactive repositories>> via `ReactiveQuerydslPredicateExecutor`.
 * <<reactive.gridfs,Reactive GridFS support>>.
+* Template API delete by entity considers the version property in delete queries.
+* Repository deletes now throw `OptimisticLockingFailureException` when a versioned entity cannot be deleted.
 
 [[new-features.2-1-0]]
 == What's New in Spring Data MongoDB 2.1
