DATAMONGO-2072 - Support Range in repository between queries.
We now support o.s.d.domain.Range as method parameter for between queries. This allows more fine grained control over the inclusion/exclusion of the upper/lower bounds. Up till now between required 2 parameters which had been strictly bound to excluding bounds using $gt and $lt.

--- a/src/main/asciidoc/reference/mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/mongo-repositories.adoc
@@ -188,8 +188,10 @@ The following table shows the keywords that are supported for query methods:
 | `{"age" : {"$lte" : age}}`
 
 | `Between`
-| `findByAgeBetween(int from, int to)`
-| `{"age" : {"$gt" : from, "$lt" : to}}`
+| `findByAgeBetween(int from, int to)` +
+`findByAgeBetween(Range<Integer> range)`
+| `{"age" : {"$gt" : from, "$lt" : to}}` +
+lower / upper bounds (`$gt` / `$gte` & `$lt` / `$lte`) according to `Range`
 
 | `In`
 | `findByAgeIn(Collection ages)`
