DATAMONGO-1783 - Apply query limit and offset to CountOptions for MongoOperations.count
We now passe on the range defined by Query.skip and Query.limit to the MongoDB server. This allows to count documents within a certain range so that it is possible to find the number of matches within eg. the first 10,000 documents.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -10,6 +10,7 @@
 * Template API delete by entity considers the version property in delete queries.
 * Repository deletes now throw `OptimisticLockingFailureException` when a versioned entity cannot be deleted.
 * Support `Range<T>` in repository between queries.
+* Changed behavior of `Reactive/MongoOperations#count` now limiting the range to count matches within by passing on _offset_ & _limit_ to the server.
 * Kotlin extension methods accepting `KClass` are deprecated now in favor of `reified` methods.
 * Support of array filters in `Update` operations.
 
